upload e loja corrigido

--- a/collecor/src/main/resources/templates/loja.html
+++ b/collecor/src/main/resources/templates/loja.html
@@ -20,7 +20,7 @@
     <!--pageContent-->
     <div class="row">
         <!--tabBar-->
-        <div class="col-1 p-1 tabbar">
+        <div class="col-1 p-1 tabbar" style="min-height: 90vh;">
           <div class="col-12">
             <img src="imgs/favoritos/logo.png" class="img-fluid rounded float-start">
           </div>
@@ -57,25 +57,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-            
-            <!--pagination-->
-            <div class="d-flex justify-content-center py-5" aria-label="...">
-              <ul class="pagination">
-                <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                  </a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
