--- a/collecor/src/main/resources/templates/upload.html
+++ b/collecor/src/main/resources/templates/upload.html
@@ -19,6 +19,7 @@
     <div class="container-fluid d-flex justify-content-center my-4">
       <form  class="rounded-5 content p-5 col-12"method="post" action="/products/uploadArquivo" enctype="multipart/form-data" style="height: 88vh;">
         <div class="row">
+          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
           <div class="caixa_upp d-flex flex-column justify-content-center align-items-center col-5 m-0" >
               <img src="/imgs/upload/bt upload icon.png" style="width: 200px; height: 200px" alt="" srcset="">
               <div class='input-wrapper text-white'>
