--- a/collecor/src/main/resources/templates/index.html
+++ b/collecor/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="PT_br">
+<html lang="pt_br" xmlns:th="www.thymeleaf.org">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -19,20 +19,20 @@
 
     <div class="princ row px-5">
       <div class="astro col-5">
-        <img src="imgs/home/astronauta.png" style="height: 100%; ">
+        <img src="imgs/home/astronauta.png" alt="" style="height: 100%; ">
       </div>
       <div class="title col-7 d-flex justify-content-center align-items-center flex-column">
         <p class="text-white">Visual Vision</p>
         <div class="p2">
           <p class="text-white ">Sejam Bem Vindos(as)
-          <a href="#" class="btn rounded-pill text-white" role="button" style="height: 45px; width: 120px; font-size: 22.5px;">Entrar</a></p>
+          <a href="/login" class="btn rounded-pill text-white" role="button" style="height: 45px; width: 120px; font-size: 22.5px;">Entrar</a></p>
         </div>
       </div>
     </div>
 
     <div class="meio row px-5">
        <div class="col-4">
-        <img src="imgs/home/img1.png"    style="width: 386px; height: 235px;">
+        <img src="imgs/home/img1.png" alt="" style="width: 386px; height: 235px;">
       </div>
       <div class="text-white col-8 d-flex justify-content-center align-items-center ">
         <p>Explore as categorias que estão em alta</p>
@@ -44,14 +44,14 @@
        <p>Compartilhe projetos em tempo real</p>
      </div>
      <div class="col-4">
-       <img src="imgs/home/img2.png"    style="width: 386px; height: 235px;">
+       <img src="imgs/home/img2.png" alt="" style="width: 386px; height: 235px;">
      </div>
    </div>
 
    
    <div class="fim row px-5">
     <div class="col-4">
-     <img src="imgs/home/img3.png"    style="width: 386px; height: 235px;">
+     <img src="imgs/home/img3.png" alt="" style="width: 386px; height: 235px;">
    </div>
    <div class="text-white col-8 d-flex justify-content-center align-items-center ">
      <p>Tenha acesso a todo conteúdo da comunidade a qualquer momento</p>
