--- a/collecor/src/main/resources/templates/sobre.html
+++ b/collecor/src/main/resources/templates/sobre.html
@@ -78,8 +78,8 @@
                             <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/ekko.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
                             <div class="">
                                 <h4>Thiago Lima</h4>
-                                <p class="text-muted">Programador web full-stack, trabalho principalmente com java html e css, utilizando os
-                                    frameworks Springs (Spring boot e Spring Security) e Bootstrap<a href="#" class="text-pink"></a></p>
+                                <p class="text-muted">Programador web full-stack, trabalho com java html e css, utilizando os
+                                    frameworks Springs (Spring boot e Spring Security) e Bootstrap.. <br> Persevere in prayer!<a href="#" class="text-pink"></a></p>
                             </div>
                         
                             <div class="mt-4">
