--- a/collecor/src/main/resources/static/css/paginas/loja.css
+++ b/collecor/src/main/resources/static/css/paginas/loja.css
@@ -10,9 +10,6 @@ body{
   width: 100%;
   height: 100%;
 }
-.tab-buttons{
-  width: 100%;
-}
 .search{
   position: relative; 
   }
@@ -64,4 +61,162 @@ div{
 .row{
   --bs-gutter-x: 0;
 }
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
+
+.container{
+  display: block;
+
+  margin: 2px;
+  height: 3px;
+  width: 3px;
+  padding: 2px;
+}
+
+h2 {
+  color: #AAAAAA;
+}
+
+.container ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+}
+
+ul li{
+  color: #AAAAAA;
+  display: block;
+  position: relative;
+  float: left;
+
+ 
+  border-bottom: 1px solid #333;
+}
+
+ul li input[type=radio]{
+  position: absolute;
+  visibility: hidden;
+}
+
+ul li label{
+  display: block;
+  position: relative;
+  font-weight: 20px;
+  font-size: 100%;
+  padding: 9px 9px 9px 50px;
+ 
+  cursor: pointer;
+  
+}
+
+ul li:hover label{
+  color: #FFFFFF;
+}
+
+ul li .check{
+  display: block;
+  position: absolute;
+  border: 5px solid #AAAAAA;
+  border-radius: 80%;
+  height: 15px;
+  width: 15px;
+  top: 15px;
+  left: 15px;
+  z-index: 4;
+  transition: border .25s linear;
+  -webkit-transition: border .25s linear;
+}
+
+ul li:hover .check {
+  border: 4px solid #FFFFFF;
+}
+
+ul li .check::before {
+  display: block;
+  position: absolute;
+  content: '';
+ 
+
+  transition: background 0.25s linear;
+  -webkit-transition: background 0.25s linear;
+}
+
+input[type=radio]:checked ~ .check {
+  border: 5px solid #6154cf;
+}
+
+input[type=radio]:checked ~ .check::before{
+  background: #4b48d6;
+}
+
+input[type=radio]:checked ~ label{
+  color: #5a37f8;
+}
+
+.signature {
+  margin: 10px auto;
+  padding: 10px;
+  width: 100%;
+}
+
+.signature p{
+  text-align: center;
+  font-family: Helvetica, Arial, Sans-Serif;
+  font-size: 0.85em;
+  color: #ffffff;
+}
+
+.signature .much-heart{
+  display: inline-block;
+  position: relative;
+  margin: 0 4px;
+  height: 10px;
+  width: 10px;
+  background: #AC1D3F;
+  border-radius: 4px;
+  -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.signature .much-heart::before, 
+.signature .much-heart::after {
+    display: block;
+  content: '';
+  position: absolute;
+  margin: auto;
+  height: 10px;
+  width: 10px;
+  border-radius: 5px;
+  background: #AC1D3F;
+  top: -4px;
+}
+
+.signature .much-heart::after {
+  bottom: 0;
+  top: auto;
+  left: -4px;
+}
+
+.signature a {
+  color: #AAAAAA;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.alert h2 {
+  font-size: 10px;
+  color: #232323;
+  margin-top: 0;
+}
+
+.alert p {
+  line-height: 1.6em;
+  font-size:15px;
+}
+
+.alert a {
+  color: #232323;
+  font-weight: bold;
+}
