upload wih  user id, profile adjusts

--- a/collecor/src/main/resources/static/css/paginas/profile.css
+++ b/collecor/src/main/resources/static/css/paginas/profile.css
@@ -37,7 +37,7 @@ body{
   width: 18rem;
 }
 .rounded-pill{
-  background-color: #4B18B0;
+  background-color: #1E1455;
   color: white;
   width: 120px;
 }
