--- a/collecor/src/main/resources/templates/profile.html
+++ b/collecor/src/main/resources/templates/profile.html
@@ -21,14 +21,10 @@
       <img  class="card-img-top" src="imgs\perfil\black.jpeg" alt="capa">
       <div class="card-body card-background">
         <div class="d-flex justify-content-center">
-          <img class="rounded-circle profile" src="imgs/perfil/foto.jpeg" alt="">
-        </div>
-        <div class="d-flex justify-content-center">
-          <a href="javascript:void(0)" class="btn rounded-pill" style="height: 50px; width: 150px; font-size: 23px;">Seguir</a>
+          <img class="rounded-circle profile" src="imgs/compartilhadas/icone perfil padrao.jpg" alt="">
         </div>
         <div class="d-grid gap-1 pt-4 text-center">
-          <p class="m-b-0 text-profile" style="font-size: 60px;">Hanna Jackson</p>
-          <p class="text-profile"style="font-size: 20px;">Web Designer &amp; Developer</p>
+          <p class="m-b-0 text-profile" style="font-size: 60px;" sec:authentication="name"></p>
         </div>
       </div>
     </div>
@@ -36,7 +32,7 @@
     <div class="mt-3 strip">
       <div class="row align-items-center">
         <h3 class="px-2 py-1 fs-2 fw-bold text-white col-11 m-0">Criações</h3>
-        <a href="/upload" class="btn rounded-pill bg-success col-1" style="height: 40px; width: 120px; font-size: 20px;">Adicionar</a>
+        <a href="/upload" class="btn rounded-pill col-1" style="height: 40px; width: 120px; font-size: 20px;">Adicionar</a>
       </div>
     </div>
 
