--- a/collecor/src/main/resources/static/css/paginas/loja.css
+++ b/collecor/src/main/resources/static/css/paginas/loja.css
@@ -84,7 +84,7 @@ h2 {
 
 }
 
-ul li{
+.radioTabBar{
   color: #AAAAAA;
   display: block;
   position: relative;
@@ -94,12 +94,12 @@ ul li{
   border-bottom: 1px solid #333;
 }
 
-ul li input[type=radio]{
+.radioTabBar input[type=radio]{
   position: absolute;
   visibility: hidden;
 }
 
-ul li label{
+.radioTabBar label{
   display: block;
   position: relative;
   font-weight: 20px;
@@ -110,11 +110,11 @@ ul li label{
   
 }
 
-ul li:hover label{
+.radioTabBar:hover label{
   color: #FFFFFF;
 }
 
-ul li .check{
+.radioTabBar .check{
   display: block;
   position: absolute;
   border: 5px solid #AAAAAA;
@@ -128,11 +128,11 @@ ul li .check{
   -webkit-transition: border .25s linear;
 }
 
-ul li:hover .check {
+.radioTabBar :hover .check {
   border: 4px solid #FFFFFF;
 }
 
-ul li .check::before {
+.radioTabBar .check::before {
   display: block;
   position: absolute;
   content: '';
