--- a/collecor/src/main/resources/templates/loja.html
+++ b/collecor/src/main/resources/templates/loja.html
@@ -24,7 +24,7 @@
           <div class="col-12">
             <img src="imgs/favoritos/logo.png" class="img-fluid rounded float-start">
           </div>
-          <div class="container col-12">       
+          <div class="container tabCont col-12">       
             <ul class="radioTabBar">
               <li class="radioTabBar">
                 <input type="radio" id="f-option" name="selector">
