login messsage error

--- a/collecor/src/main/resources/templates/loja.html
+++ b/collecor/src/main/resources/templates/loja.html
@@ -53,7 +53,7 @@
                     <div class="check"><div class="inside"></div></div>
                   </li>
                 </ul>
-                <button type="submit" class="btn-primary rounded-pill">Buscar</button>
+                <button type="submit" class="btn btn-primary rounded-pill">Buscar</button>
               </div>    
             </form>   
           </div>
