--- a/collecor/src/main/resources/templates/login.html
+++ b/collecor/src/main/resources/templates/login.html
@@ -32,6 +32,9 @@
               <div class="col-md-6 offset-md-3">
                 <div class="card my-5">
                   <form class="p-lg-5" method="post" th:action="@{/login}"  style="background-color: #01002A;">
+                    <div class="alert alert-danger d-flex justify-content-center" th:if="${param.error}" id="loginF" role="alert">
+                      Usuário ou senha inválidos!
+                    </div>                
                     <div class="text-center d-flex justify-content-center" >
                       <img src="imgs/compartilhadas/icone perfil padrao.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
                         width="200px" alt="profile">
@@ -58,6 +61,6 @@
     <div th:replace="~{fragments :: footer}"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
+
   </body>
 </html>
