--- a/collecor/src/main/resources/templates/profile.html
+++ b/collecor/src/main/resources/templates/profile.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/fragments/navbar.css">
     <link rel="stylesheet" href="css/fragments/footerpage.css">
     <link rel="stylesheet" href="css/fragments/popup.css"> 
-    <title>Perfil</title>
+
     <title>Perfil</title>
   </head>
   <body>
@@ -35,93 +35,33 @@
         <a href="/upload" class="btn rounded-pill col-1" style="height: 40px; width: 120px; font-size: 20px;">Adicionar</a>
       </div>
     </div>
-
     <!--Content-Content-->
-    <div class="colunmn col">
-      <div class="row justify-content-center gap-1 pt-3 px-3">
-        <div class="card card-content">
-          <img src="imgs/favoritos/contents_image.jpg" class="card-img-top pt-1" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="colunmn col pt-4">
+      <!--content-content-->
+      <div class="row col-12 justify-content-center">
+        <div th:if= "${#lists.isEmpty(list)}">
+          <div th:replace="fragments :: empty"></div>
+        </div>
+
+        <div class="pt-3 px-3 mb-5" th:each="l : ${list}" style="width: 350px;">
+          <div class="card">
+            <a th:href="${l.contentPath}" target="_blank"><img th:src="${l.imagePath}" class="card-img-top" style="height: 290px; width: 100%;" alt="..."></a>
+            <div class="card-body">
+              <p class="card-title" th:text="${l.name}" style="font-size: larger; font-weight: 500;"></p>
+              <p class="card-text" th:text="${l.description}" data-ls-module="charCounter"></p>
+              <a th:href="${l.contentPath}" class="btn mt-3 text-white" style="background-color: #4B18B0;" th:download="${l.name}">Baixar</a>
+            </div>
           </div>
         </div>
-        <div class="card card-content">
-          <img src="imgs/favoritos/contents_image.jpg" class="card-img-top pt-1" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-        <div class="card card-content">
-          <img src="imgs/favoritos/contents_image.jpg" class="card-img-top pt-1" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-        <div class="card card-content">
-          <img src="imgs/favoritos/contents_image.jpg" class="card-img-top pt-1" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-        <div class="card card-content">
-          <img src="imgs/favoritos/contents_image.jpg" class="card-img-top pt-1" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-        <div class="card card-content">
-          <img src="imgs/favoritos/contents_image.jpg" class="card-img-top pt-1" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-        <div class="card card-content">
-          <img src="imgs/favoritos/contents_image.jpg" class="card-img-top pt-1" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-        <div class="card card-content">
-          <img src="imgs/favoritos/contents_image.jpg" class="card-img-top pt-1" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-        <div class="card card-content">
-          <img src="imgs/favoritos/contents_image.jpg" class="card-img-top pt-1" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-        <div class="card card-content">
-          <img src="imgs/favoritos/contents_image.jpg" class="card-img-top pt-1" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-      </div>
-      <!--pagination-->
-      <div class="d-flex justify-content-center py-2" aria-label="...">
-        <ul class="pagination">
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-        </ul>
       </div>
     </div>
 
     <div th:replace="~{fragments :: footer}"></div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/loginpopup.js"></script>
+    <script>
+
+    </script>
   </body>
 </html>
